[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_lung_morphometrics"
version = "0.4.0"
description = "A set of tools for measuring MLI and the like."
readme = "README.rst"
authors = [
  {name = "Sylvia N. Michki", email = "sylvia.michki@gmail.com"}
]
maintainers = [
  {name = "Sylvia N. Michki", email = "sylvia.michki@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 4 - Beta",
]
license = {text = "GNU General Public License v3"}

dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]
cellpose = [
    "cellpose"
]

[project.urls]
bugs = "https://github.com/sylviamic/python_lung_morphometrics/issues"
changelog = "https://github.com/sylviamic/python_lung_morphometrics/blob/master/changelog.md"
homepage = "https://github.com/sylviamic/python_lung_morphometrics"

[project.scripts]
python-lung-morphometrics = "python_lung_morphometrics.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"